# fingera_hash

./: .gitmodules  CMakeLists.txt  README.md
include/fingera/hash/: block.h  block_impl.h  btc.h  ripemd160.h  sha1.h  sha2.h
src/: btc.c  ripemd160.c  sha1.c  sha2.c
tests/: CMakeLists.txt  test_btc.cpp  test_ripemd160.cpp  test_sha1.cpp  test_sha2.cpp  test_utility.h
